Adding go pre-commit hooks.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,18 @@ repos:
     -   id: check-yaml
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
+
+-   repo: https://github.com/tekwizely/pre-commit-golang
+    rev: master
+    hooks:
+    # Go Mod Tidy
+    #
+    -   id: go-mod-tidy
+    -   id: go-mod-tidy-repo
+    #
+    # Go Test
+    #
+    -   id: go-test-mod
+    -   id: go-test-pkg
+    -   id: go-test-repo-mod
+    -   id: go-test-repo-pkg
